# GravityShooter

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  configure.h.cmake  main.cpp
src/: ball.cpp  ball.h  baselight.h  directionallight.cpp  directionallight.h  loaders.cpp  loaders.h  main.cpp  main.h  mapobject.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h
src/shaders/: deferred_1stpass.cpp  deferred_1stpass.frag  deferred_1stpass.h  deferred_1stpass.vert  directionallightshader.cpp  directionallightshader.frag  directionallightshader.h  directionallightshader.vert  pointlightshader.cpp  pointlightshader.frag  pointlightshader.h  shaders.conf
